2016-03-21 (#735, #736)
- Added MIT licence for Irish [ga], Cyrillic Mongolian [mn-cyrl], Turkmen [tk]
- Added “Unicode licence” for Croatian [hr]
- Added text of “Unicode licence” to hyph-en-gb.tex(unicode-licence)

2016-03-20 (#733)
- Put French patterns under the MIT licence.

2016-03-19 (#729, '731)
- Added MIT licence for Welsh [cy], Danish [da], Slovenian [sl]; “Unicode licence” for Basque [eu]
- Added hyph-en-gb.tex(unicode-licence)

== CTAN release 2016.02.17 (#725) ==

2016-02-17 (#722, #723, #724)
- Added patterns with apostrophe for Occitan

== CTAN release 2016.02.11 (#721) ==

2016-02-06 (#718)
- add Occitan patterns (by Claudio Beccari)

2016-01-23 (#716)
- update Indic patterns, now under MIT licence

2015-12-22 (#710)
- MIT licence added to the Estonian patterns

2015-12-11 (#709)
- Updated Spanish licence to MIT/X11

2015-12-10 (#708)
- Portuguese patterns under BSD-3 clause licence

== CTAN release 2015.11.20 (#707) ==

2015-11-12 (#704, #705)
- update Spanish patterns (by Javier Bezos)

== CTAN release 2015.05.09 (#696) ==

2015-05-07 (#691)
- update Thai patterns (by Theppitak Karoonboonyanan)

== CTAN release 2014.10.13 (#687) ==

2014-10-13 (#687)
- update Classical Latin patterns (by Claudio Beccari)

2014-08-22 (#686)
- update Thai patterns (by Theppitak Karoonboonyanan)

== CTAN release 2014.07.04 (#682) ==

2014-06-03 (#672)
- add Classical Latin patterns (by Claudio Beccari)
- clean up comments for Latin patterns

== CTAN release 2014.05.22 (#668) ==

2014-05-22 (#668)
- update German patterns (by Werner Lemberg), version 2014-05-21

== CTAN release 2014.04.24 (#665) ==

2014-04-23 (#663)
- update Italian patterns (by Claudio Beccari), version 4.9

2013-10-28 (#654)
- update Thai patterns (by Theppitak Karoonboonyanan)

== CTAN release 2013.10.08 (#651) ==

2013-10-08 (#651)
- update Afrikaans patterns (by Tilla Fick & Chris Swanepoel), version 1.0

2013-06-04 (#648)
- reintroduce Georgian patterns under LPPL licence;