@@ -7,6 +7,7 @@ basque	loadhyph-eu.tex
 bulgarian	loadhyph-bg.tex
 catalan	loadhyph-ca.tex
 pinyin	loadhyph-zh-latn-pinyin.tex
+churchslavonic	loadhyph-cu.tex
 coptic	loadhyph-cop.tex
 croatian	loadhyph-hr.tex
 czech	loadhyph-cs.tex
