@@ -1,0 +1,18 @@
+category TLCore
+depend hyphen-base
+depend hyph-utf8
+shortdesc Church Slavonic hyphenation patterns.
+longdesc Hyphenation patterns for Church Slavonic in UTF-8 encoding
+execute AddHyphen \
+	name=churchslavonic \
+	lefthyphenmin=1 \
+	righthyphenmin=2 \
+	file=loadhyph-cu.tex \
+	file_patterns=hyph-cu.pat.txt \
+	file_exceptions=hyph-cu.hyp.txt
+runpattern f texmf-dist/tex/generic/hyph-utf8/loadhyph/loadhyph-cu.tex
+runpattern f texmf-dist/tex/generic/hyph-utf8/patterns/tex/hyph-cu.tex
+runpattern f texmf-dist/tex/generic/hyph-utf8/patterns/txt/hyph-cu.chr.txt
+runpattern f texmf-dist/tex/generic/hyph-utf8/patterns/txt/hyph-cu.hyp.txt
+runpattern f texmf-dist/tex/generic/hyph-utf8/patterns/txt/hyph-cu.lic.txt
+runpattern f texmf-dist/tex/generic/hyph-utf8/patterns/txt/hyph-cu.pat.txt
