@@ -1,11 +1,26 @@
+% filename: loadhyph-cu.tex
+% language: churchslavonic
+%
+% Loader for hyphenation patterns, generated by
+%     source/generic/hyph-utf8/generate-pattern-loaders.rb
+% See also http://tug.org/tex-hyphen
+%
+% Copyright 2008-2016 TeX Users Group.
+% You may freely use, modify and/or distribute this file.
+% (But consider adapting the scripts if you need modifications.)
+%
+% Once it turns out that more than a simple definition is needed,
+% these lines may be moved to a separate file.
+%
 \begingroup
-% Test whether we received one or two arguments
-\def\testengine#1#2!{\def\secondarg{#2}}
+% Test for pTeX
+\ifx\kanjiskip\undefined
+% Test for native UTF-8 (which gets only a single argument)
 % That's Tau (as in Taco or ΤΕΧ, Tau-Epsilon-Chi), a 2-byte UTF-8 character
-\testengine Τ!\relax
-% Unicode-aware engine (such as XeTeX or LuaTeX) only sees a single (2-byte) argument
+\def\testengine#1#2!{\def\secondarg{#2}}\testengine Τ!\relax
 \ifx\secondarg\empty
-    \message{UTF-8 Church Slavonic Hyphenation Patterns}
+    % Unicode-aware engine (such as XeTeX or LuaTeX) only sees a single (2-byte) argument
+    \message{UTF-8 Church Slavonic hyphenation patterns}
     % fix lccodes for some characters (they were recently included in Unicode)
     \lccode"1C82="1C82 % sharp o in lowercase "uk"
     \lccode"1DF6="1DF6
@@ -17,9 +32,14 @@
     \lccode"A67E="A67E
     \lccode"FE2E="FE2E
     \lccode"FE2F="FE2F
-    %
     \input hyph-cu.tex
 \else
-    \message{No Church Slavonic hyphenation patterns - please use XeLaTeX or LuaLaTex}
+    % 8-bit engine (such as TeX or pdfTeX)
+    \message{No Church Slavonic hyphenation patterns - only for Unicode engines}
+    %\input zerohyph.tex
+\fi\else
+    % pTeX
+    \message{No Church Slavonic hyphenation patterns - only for Unicode engines}
+    %\input zerohyph.tex
 \fi
 \endgroup
