@@ -1,3 +1,6 @@
+2016-04-17 (#744, #745)
+- Added Church Slavonic patterns (by Mike Kroutikov and Aleksandr Andreev)
+
 2016-03-21 (#735, #736)
 - Added MIT licence for Irish [ga], Cyrillic Mongolian [mn-cyrl], Turkmen [tk]
 - Added “Unicode licence” for Croatian [hr]
